@@ -1,13 +1,8 @@
 package com.pooli.family.service.impl;
 
-import java.time.YearMonth;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.data.redis.core.HashOperations;
-import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -21,8 +16,7 @@ import com.pooli.family.domain.dto.response.FamilyMembersSimpleResDto;
 import com.pooli.family.exception.FamilyErrorCode;
 import com.pooli.family.mapper.FamilyMapper;
 import com.pooli.family.service.FamilyService;
-import com.pooli.traffic.service.runtime.TrafficRedisKeyFactory;
-import com.pooli.traffic.service.runtime.TrafficRedisRuntimePolicy;
+import com.pooli.traffic.service.runtime.TrafficRemainingBalanceQueryService;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -31,128 +25,100 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 @RequiredArgsConstructor
 public class FamilyServiceImpl implements FamilyService {
-	
-	private final FamilyMapper familyMapper;
-    @Qualifier("cacheStringRedisTemplate")
-    private final StringRedisTemplate cacheStringRedisTemplate;
-    private final TrafficRedisKeyFactory trafficRedisKeyFactory;
-    private final TrafficRedisRuntimePolicy trafficRedisRuntimePolicy;
 
-	@Override
-	@Transactional(readOnly = true)
-	public FamilyMembersResDto getFamilyMembers(AuthUserDetails principal) {
-		
-		FamilyMembersResDto header = familyMapper.selectFamilyMembersHeader(principal.getLineId());
-		if (header == null) {
-			throw new ApplicationException(FamilyErrorCode.FAM_NOT_FOUND);
-		}
-		
-		List<FamilyMembersResDto.FamilyMemberDto> members =
-		    familyMapper.selectFamilyMembers(header.getFamilyId(),principal.getLineId());
+    private final FamilyMapper familyMapper;
+    private final TrafficRemainingBalanceQueryService trafficRemainingBalanceQueryService;
 
-        List<FamilyMembersResDto.FamilyMemberDto> enrichedMembers = applyTrafficCachedBalances(
-                header.getFamilyId(),
-                members
-        );
-		
-		return FamilyMembersResDto.builder()
-		      .isEnable(header.getIsEnable())
-		      .familyId(header.getFamilyId())
-		      .sharedPoolTotalData(header.getSharedPoolTotalData())
-		      .members(enrichedMembers)
-		      .build();
-	}
-
-	@Override
-	@Transactional(readOnly = true)
-	public List<FamilyMembersSimpleResDto> getFamilyMembersSimple(AuthUserDetails principal) {
-		
-		List<FamilyMembersSimpleResDto> list = familyMapper.selectFamilyMembersSimpleByLineId(principal.getLineId());
-		
-		if (list.isEmpty()) {
-		    throw new ApplicationException(FamilyErrorCode.FAM_NOT_FOUND);
-		}
-		
-		return list;
-	}
-
-	@Override
-	public Void updateVisibility(UpdateVisibilityReqDto request, AuthUserDetails principal) {
-		
-		// 현재 인증 계정과 접근 회선이 다를 경우
-		if(!Objects.equals(request.getLineId(), principal.getLineId())) {
-			log.info( request.getLineId() + " / " + principal.getLineId());
-			throw new ApplicationException(CommonErrorCode.LINE_OWNERSHIP_FORBIDDEN);
-		}
-		
-		// Permission 여부 확인
-		Boolean permissionId = familyMapper.isPermissionEnabledByTitle(principal.getLineId());
-		
-		if (!Boolean.TRUE.equals(permissionId)) {
-			throw new ApplicationException(FamilyErrorCode.FAM_NOT_FOUND);
-		}
-		
-		// 공개 여부 수정
-		int updated = familyMapper.updateFamilyLineVisibility(principal.getLineId(), request.getIsPublic());
-	    if (updated == 0) {
-	        throw new ApplicationException(FamilyErrorCode.FAM_CONFLICT);
-	    }
-	    
-		return null;
-	}
-
-	@Override
-	  @Transactional(readOnly = true)
-	  public FamilyMemberSummaryResDto getFamilyMembersByLineId(Long lineId) {
-
-	      Integer familyId = familyMapper.selectFamilyIdByLineId(lineId);
-	      if (familyId == null) {
-	          throw new ApplicationException(FamilyErrorCode.FAM_NOT_FOUND);
-	      }
-
-	      List<FamilyMemberSummaryResDto.FamilyMemberSummaryDto> members =
-	          familyMapper.selectFamilyMemberSummaryByFamilyIdAndLineId(familyId, lineId);
-
-	      if (members.isEmpty()) {
-	          throw new ApplicationException(FamilyErrorCode.FAM_NOT_FOUND);
-	      }
-
-	      /* 추후 전화번호 마스킹 처리 예정 */
-	      
-	      return FamilyMemberSummaryResDto.builder()
-	          .familyId(familyId)
-	          .members(members)
-	          .build();
-	  }
-
-    private List<FamilyMembersResDto.FamilyMemberDto> applyTrafficCachedBalances(
-            Integer familyId,
-            List<FamilyMembersResDto.FamilyMemberDto> members
-    ) {
-        if (familyId == null || familyId <= 0 || members == null || members.isEmpty()) {
-            return members;
+    @Override
+    @Transactional(readOnly = true)
+    public FamilyMembersResDto getFamilyMembers(AuthUserDetails principal) {
+        FamilyMembersResDto header = familyMapper.selectFamilyMembersHeader(principal.getLineId());
+        if (header == null) {
+            throw new ApplicationException(FamilyErrorCode.FAM_NOT_FOUND);
         }
 
-        YearMonth targetMonth = YearMonth.now(trafficRedisRuntimePolicy.zoneId());
-        long sharedBufferedAmount = readSharedBufferedAmount(familyId.longValue(), targetMonth);
+        Long familyId = header.getFamilyId() == null ? null : header.getFamilyId().longValue();
+        Long actualSharedPoolRemaining = trafficRemainingBalanceQueryService.resolveSharedActualRemaining(
+                familyId,
+                header.getSharedPoolRemainingData()
+        );
 
-        return members.stream()
-                .map(member -> enrichMemberWithCachedBalances(member, targetMonth, sharedBufferedAmount))
-                .collect(Collectors.toList());
+        List<FamilyMembersResDto.FamilyMemberDto> members = familyMapper
+                .selectFamilyMembers(header.getFamilyId(), principal.getLineId())
+                .stream()
+                .map(member -> enrichFamilyMember(member, actualSharedPoolRemaining))
+                .toList();
+
+        return FamilyMembersResDto.builder()
+                .isEnable(header.getIsEnable())
+                .familyId(header.getFamilyId())
+                .sharedPoolTotalData(header.getSharedPoolTotalData())
+                .members(members)
+                .build();
     }
 
-    private FamilyMembersResDto.FamilyMemberDto enrichMemberWithCachedBalances(
-            FamilyMembersResDto.FamilyMemberDto member,
-            YearMonth targetMonth,
-            long sharedBufferedAmount
-    ) {
-        if (member == null) {
-            return null;
+    @Override
+    @Transactional(readOnly = true)
+    public List<FamilyMembersSimpleResDto> getFamilyMembersSimple(AuthUserDetails principal) {
+        List<FamilyMembersSimpleResDto> list = familyMapper.selectFamilyMembersSimpleByLineId(principal.getLineId());
+
+        if (list.isEmpty()) {
+            throw new ApplicationException(FamilyErrorCode.FAM_NOT_FOUND);
         }
 
-        long individualBufferedAmount = member.getLineId() == null
-                ? 0L
-                : readIndividualBufferedAmount(member.getLineId().longValue(), targetMonth);
+        return list;
+    }
+
+    @Override
+    public Void updateVisibility(UpdateVisibilityReqDto request, AuthUserDetails principal) {
+        if (!Objects.equals(request.getLineId(), principal.getLineId())) {
+            log.info("{} / {}", request.getLineId(), principal.getLineId());
+            throw new ApplicationException(CommonErrorCode.LINE_OWNERSHIP_FORBIDDEN);
+        }
+
+        Boolean permissionId = familyMapper.isPermissionEnabledByTitle(principal.getLineId());
+        if (!Boolean.TRUE.equals(permissionId)) {
+            throw new ApplicationException(FamilyErrorCode.FAM_NOT_FOUND);
+        }
+
+        int updated = familyMapper.updateFamilyLineVisibility(principal.getLineId(), request.getIsPublic());
+        if (updated == 0) {
+            throw new ApplicationException(FamilyErrorCode.FAM_CONFLICT);
+        }
+
+        return null;
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public FamilyMemberSummaryResDto getFamilyMembersByLineId(Long lineId) {
+        Integer familyId = familyMapper.selectFamilyIdByLineId(lineId);
+        if (familyId == null) {
+            throw new ApplicationException(FamilyErrorCode.FAM_NOT_FOUND);
+        }
+
+        List<FamilyMemberSummaryResDto.FamilyMemberSummaryDto> members =
+                familyMapper.selectFamilyMemberSummaryByFamilyIdAndLineId(familyId, lineId);
+
+        if (members.isEmpty()) {
+            throw new ApplicationException(FamilyErrorCode.FAM_NOT_FOUND);
+        }
+
+        return FamilyMemberSummaryResDto.builder()
+                .familyId(familyId)
+                .members(members)
+                .build();
+    }
+
+    private FamilyMembersResDto.FamilyMemberDto enrichFamilyMember(
+            FamilyMembersResDto.FamilyMemberDto member,
+            Long actualSharedPoolRemaining
+    ) {
+        Long lineId = member.getLineId() == null ? null : member.getLineId().longValue();
+        Long actualRemainingData = trafficRemainingBalanceQueryService.resolveIndividualActualRemaining(
+                lineId,
+                member.getRemainingData()
+        );
 
         return FamilyMembersResDto.FamilyMemberDto.builder()
                 .isMe(member.getIsMe())
@@ -162,47 +128,36 @@ public class FamilyServiceImpl implements FamilyService {
                 .userName(member.getUserName())
                 .phone(member.getPhone())
                 .planName(member.getPlanName())
-                .remainingData(safeAdd(member.getRemainingData(), individualBufferedAmount))
+                .remainingData(actualRemainingData)
                 .basicDataAmount(member.getBasicDataAmount())
                 .role(member.getRole())
                 .sharedPoolTotalAmount(member.getSharedPoolTotalAmount())
-                .sharedPoolRemainingAmount(safeAdd(member.getSharedPoolRemainingAmount(), sharedBufferedAmount))
+                .sharedPoolRemainingAmount(resolveSharedPoolRemainingAmount(member, actualSharedPoolRemaining))
+                .sharedLimitActive(member.getSharedLimitActive())
                 .build();
     }
 
-    private long readIndividualBufferedAmount(long lineId, YearMonth targetMonth) {
-        String key = trafficRedisKeyFactory.remainingIndivAmountKey(lineId, targetMonth);
-        return readHashLong(key, "amount");
-    }
-
-    private long readSharedBufferedAmount(long familyId, YearMonth targetMonth) {
-        String key = trafficRedisKeyFactory.remainingSharedAmountKey(familyId, targetMonth);
-        return readHashLong(key, "amount");
-    }
-
-    private long readHashLong(String key, String field) {
-        try {
-            HashOperations<String, Object, Object> hashOperations = cacheStringRedisTemplate.opsForHash();
-            Object rawValue = hashOperations.get(key, field);
-            if (rawValue == null) {
-                return 0L;
-            }
-
-            long parsed = Long.parseLong(String.valueOf(rawValue));
-            return Math.max(0L, parsed);
-        } catch (RuntimeException e) {
-            log.warn("family_cached_balance_read_failed key={} field={}", key, field, e);
-            return 0L;
+    private Long resolveSharedPoolRemainingAmount(
+            FamilyMembersResDto.FamilyMemberDto member,
+            Long actualSharedPoolRemaining
+    ) {
+        if (actualSharedPoolRemaining == null) {
+            return member.getSharedPoolRemainingAmount();
         }
-    }
-
-    private long safeAdd(Long baseValue, long additionalValue) {
-        long normalizedBaseValue = baseValue == null ? 0L : Math.max(0L, baseValue);
-        long normalizedAdditionalValue = Math.max(0L, additionalValue);
-        if (normalizedBaseValue > Long.MAX_VALUE - normalizedAdditionalValue) {
-            return Long.MAX_VALUE;
+        if (!Boolean.TRUE.equals(member.getSharedLimitActive())) {
+            return actualSharedPoolRemaining;
         }
-        return normalizedBaseValue + normalizedAdditionalValue;
-    }
 
+        Long policyRemaining = member.getSharedPoolRemainingAmount();
+        if (policyRemaining == null) {
+            return null;
+        }
+        if (policyRemaining == -1L) {
+            return actualSharedPoolRemaining;
+        }
+        if (actualSharedPoolRemaining == -1L) {
+            return Math.max(0L, policyRemaining);
+        }
+        return Math.min(Math.max(0L, actualSharedPoolRemaining), Math.max(0L, policyRemaining));
+    }
 }
